--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,11 @@
             android:id="@+id/add"
             />
     </LinearLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/reset"
+        android:text="RESET"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
