--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,19 @@
     android:orientation="vertical"
     tools:context="com.example.android.oilcal.MainActivity">
 
-    <TextView
-        android:layout_width="match_parent"
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="History"
-        android:gravity="center"
-        android:padding="10dp"
-        android:id="@+id/history"/>
+        android:layout_gravity="center"
+        android:text="Check History"
+        android:layout_margin="10dp"
+        android:id="@+id/checkhistory"
+        />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Total Time"
-        android:padding="15dp"
+        android:padding="10dp"
 
         android:gravity="center"
         android:id="@+id/totalTime"/>
@@ -35,7 +36,7 @@
             android:maxLines="1"
             android:layout_height="wrap_content"
             android:gravity="center"
-
+            android:theme="@style/EditTextStyle"
             android:inputType="phone"
             android:hint="Hours"
             android:id="@+id/hours"/>
@@ -45,6 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:maxLines="1"
+            android:theme="@style/EditTextStyle"
             android:hint="Mins"
 
             android:inputType="phone"
@@ -60,8 +62,9 @@
             />
     </LinearLayout>
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:id="@+id/reset"
         android:text="RESET"/>
     <LinearLayout
@@ -74,6 +77,7 @@
         <EditText
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:theme="@style/EditTextStyle"
             android:layout_height="wrap_content"
             android:hint="Oil Consumption"
             android:maxLines="1"
